--- a/kakao.login.html
+++ b/kakao.login.html
@@ -13,7 +13,7 @@
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			line-height: 0;
+			line-height: 5vh;
 		}
 		.con-c>div:nth-child(1){
 			font-size:1.5rem;
