--- a/user.analysis.start.html
+++ b/user.analysis.start.html
@@ -19,12 +19,15 @@
 		.con-c>div:nth-child(4){
 			margin-bottom: 2vh;
 			border: 1px solid var(--08);
-			background-color:var(--g);
+			background-color:var(--tt);
+
 		}
 		.con-c>div:nth-child(5){
 			border: 1px solid var(--08);
 			margin-bottom: 2vh;
-			background-color:var(--g);
+			background-color:var(--tt);
+			/* background-color:transparent 사용하면 배경색이 투명하게 바뀐다. */
+			/* 속성선언으로도 사용할 수 있었다.var()를 안써서 적용이 안됐을 뿐이었다. */
 
 		}
 		
