--- a/taste.analysis.intro.html
+++ b/taste.analysis.intro.html
@@ -5,8 +5,19 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link rel="stylesheet" href="./css/style.css">
+	<style>
+		h1{
+			margin-bottom: 2vh;
+		}
+	</style>
 </head>
 <body>
-	<h1>test</h1>
+	<div id="root-1">
+		<div class="con-c">
+			<h1>취향분석</h1>
+			<h4>재료를 보고 선택</h4>
+		</div>
+	</div>
 </body>
 </html>
