--- a/main.1.html
+++ b/main.1.html
@@ -6,22 +6,38 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="./css/style.css">
+	<style>
+	</style>
 </head>
 <body>
-	<div id="root-2">
-		<div class="con-c">
+	<div id="root-1">
+		<div class="con-c-2">
 			<header>
+				<div class="profile-2"></div>
 				<div>
-				<div>
+					<h5>참깨 뉴비</h5>
+					<h5>준형</h5>
 				</div>
-				<h5>참깨 뉴비</h5>
-				<h5>준형</h5>
-				</div>
-				<div>
-					<div></div>
-				</div>
+				<div class="square-2"></div>
 			</header>
-				<div class="width-1-vw height-50vh border-radius-50-per"></div>
+			<div class="space"></div>
+			<div class="main">
+				<h5>오늘의 재료는요</h5>
+				<div class="b-img">
+					<div class="nametag">
+						<h5>순두부</h5>
+					</div>
+				</div>
+				<div class="center-text"><h5>무엇을 만들어볼까요?</h5></div>
+					<div class="s-img-layout">
+						<div class="s-img"></div><h5>순두부 전골</h5></div>
+					</div>
+
+					<div class="s-img"></div><h5>두부 티라미수</h5></div>
+					<div class="s-img"></div><h5>순두부 비빔밥</h5></div>
+				</div>
+			</div>
+			
 			</div>
 		</div>
 	</div>
