--- a/main3.html
+++ b/main3.html
@@ -8,8 +8,15 @@
 	<link rel="stylesheet" href="./css/style.css">
 	<style>
 	.main>h5:nth-child(1){
+		margin-top: 2vh;
 		margin-bottom: 1vh;
-		margin-top: 3vh;
+	}
+	.main>div:nth-child(2)>div:nth-child(2){
+		margin-top: 2vh;
+		width: 90%;
+		position: relative;
+		left: 1vw;
+		
 	}
 	</style>
 </head>
@@ -26,11 +33,12 @@
 			</header>
 			<div class="space"></div>
 			<div class="main">
-				<h5>진행 중인 이벤트는요.</h5>
+				<h5>이번 주 푸드에세이</h5>
 				<div class="b-img">
 					<div class="nametag">
-						<h5>전국~망한 요리자랑</h5>
+						<h5>달걀, 말입니다...</h5>
 					</div>
+					<div><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo consequatur ab est obcaecati explicabo animi? Molestias veniam itaque inventore, aliquam blanditiis sit minus repudiandae quae. Aperiam dolor accusantium laborum cumque.</p></div>
 				</div>
 			</div>
 			<footer>
