--- a/main2.html
+++ b/main2.html
@@ -7,15 +7,18 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="./css/style.css">
 	<style>
-	.main>h5:nth-child(1){
-		margin-bottom: 1vh;
-		margin-top: 3vh;
-	}
+		.main>div:nth-child(4){
+			display: flex;
+		}
+		.main>h5:nth-child(1){
+			margin-top:2vh;
+			margin-bottom: 1vh;
+		}
 	</style>
 </head>
 <body>
-	<div id="root-1">
-		<div class="con-c-2">
+	<div id="root-2">
+		<div class="con-c-3">
 			<header>
 				<div class="profile-2"></div>
 				<div>
@@ -26,10 +29,22 @@
 			</header>
 			<div class="space"></div>
 			<div class="main">
-				<h5>진행 중인 이벤트는요.</h5>
+				<h5>오늘의 재료는요</h5>
 				<div class="b-img">
 					<div class="nametag">
-						<h5>전국~망한 요리자랑</h5>
+						<h5>두부</h5>
+					</div>
+				</div>
+				<div class="center-text"><h5>무엇을 만들어볼까요?</h5></div>
+				<div>
+					<div class="s-img-layout">
+						<div class="s-img"></div><h5>두부 전골</h5>
+					</div>
+					<div class="s-img-layout">
+						<div class="s-img"></div><h5>두부 티라미수</h5>
+					</div>
+					<div class="s-img-layout">
+						<div class="s-img"></div><h5>두부 비빔밥</h5>
 					</div>
 				</div>
 			</div>
