--- a/main1~3.html
+++ b/main1~3.html
@@ -36,19 +36,19 @@
 				<h5>오늘의 재료는요</h5>
 				<div class="b-img">
 					<div class="nametag">
-						<h5>순두부</h5>
+						<h5>두부</h5>
 					</div>
 				</div>
 				<div class="center-text"><h5>무엇을 만들어볼까요?</h5></div>
 				<div>
 					<div class="s-img-layout">
-						<div class="s-img"></div><h5>순두부 전골</h5>
+						<div class="s-img"></div><h5>두부 전골</h5>
 					</div>
 					<div class="s-img-layout">
-						<div class="s-img"></div><h5>순두부 티라미수</h5>
+						<div class="s-img"></div><h5>두부 티라미수</h5>
 					</div>
 					<div class="s-img-layout">
-						<div class="s-img"></div><h5>순두부 비빔밥</h5>
+						<div class="s-img"></div><h5>두부 비빔밥</h5>
 					</div>
 				</div>
 			</div>
