--- a/main1~3.html
+++ b/main1~3.html
@@ -56,7 +56,7 @@
 				<h5>진행 중인 이벤트는요.</h5>
 				<div class="b-img">
 					<div class="nametag">
-						<h5>전국~망한 요리자랑</h5>
+						<h5>전국~망한 요리자랑!</h5>
 					</div>
 				</div>
 			</div>
@@ -64,13 +64,14 @@
 				<h5>이번 주 푸드에세이</h5>
 				<div class="b-img">
 					<div class="nametag">
-						<h5>달걀, 말입니다...</h5>
+						<h5>달걀...말입니다.</h5>
 					</div>
 					<div>
-						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo consequatur ab est obcaecati explicabo animi? Molestias veniam itaque inventore, aliquam blanditiis sit minus repudiandae quae. Aperiam dolor accusantium laborum cumque.</p>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, consectetur expedita doloremque atque nulla laboriosam unde ab corporis quis consequatur totam assumenda qui a laborum iste recusandae! Sunt, hic nobis!</p>
 					</div>
 				</div>
 			</div>
+			<div class="space"></div>
 			<footer>
 				<div class="footer-icon"></div>
 				<div class="footer-icon"></div>
