--- a/main.2.html
+++ b/main.2.html
@@ -9,7 +9,7 @@
 	<style>
 	.main>h5:nth-child(1){
 		margin-bottom: 1vh;
-		margin-top: 3vh;
+		margin-top: 2vh;
 	}
 	</style>
 </head>
@@ -29,7 +29,7 @@
 				<h5>진행 중인 이벤트는요.</h5>
 				<div class="b-img">
 					<div class="nametag">
-						<h5>전국~망한 요리자랑</h5>
+						<h5>전국~망한 요리자랑!</h5>
 					</div>
 				</div>
 			</div>
