--- a/flow-main.1-3.timer.html
+++ b/flow-main.1-3.timer.html
@@ -63,6 +63,7 @@
 					
 				</div>
 			</div>
+			<div class="timer"><h3>00:01:00</h3></div>
 			<div class="space"></div>
 					<footer>
 				<div class="footer-icon"></div>
