--- a/flow-main.1-3-2.html
+++ b/flow-main.1-3-2.html
@@ -35,12 +35,7 @@
 				<div class="recipe">
 					<div class="text">
 						<h6>
-							1. 찌개용 두부 한 모를 끓는 물로 데쳐줍니다.
-						</h6>
-						<h6>
-							생두부의 맛과 첨가물을 덜어주기 위한 작업입니다.
-						</h6>
-						<h6>반드시 진행해주세요. 30초~1분 정도 데친 두부의 물기를 최대한 빼줍니다.
+							2. 블렌더에 물기를 뺀 데친 두부, 설탕 2 큰술, 메이플시럽 1 큰술, 플레인요거트 3 큰술, 바닐라에센스 0.5 큰술, 설탕 한 꼬집, 올리브오일 1 큰술을 넣고 잘 갈아줍니다.
 						</h6>
 					</div>
 					</div>
