--- a/flow-main.1-3-4.html
+++ b/flow-main.1-3-4.html
@@ -35,12 +35,7 @@
 				<div class="recipe">
 					<div class="text">
 						<h6>
-							1. 찌개용 두부 한 모를 끓는 물로 데쳐줍니다.
-						</h6>
-						<h6>
-							생두부의 맛과 첨가물을 덜어주기 위한 작업입니다.
-						</h6>
-						<h6>반드시 진행해주세요. 30초~1분 정도 데친 두부의 물기를 최대한 빼줍니다.
+						4. 그릇 또는 용기안에, 커피에 적신 카스테라와 두부크림을 순서대로 차곡차곡 올려주세요.
 						</h6>
 					</div>
 					</div>
