--- a/flow-main.1-3-5.html
+++ b/flow-main.1-3-5.html
@@ -35,12 +35,7 @@
 				<div class="recipe">
 					<div class="text">
 						<h6>
-							1. 찌개용 두부 한 모를 끓는 물로 데쳐줍니다.
-						</h6>
-						<h6>
-							생두부의 맛과 첨가물을 덜어주기 위한 작업입니다.
-						</h6>
-						<h6>반드시 진행해주세요. 30초~1분 정도 데친 두부의 물기를 최대한 빼줍니다.
+							5. 냉장고에서 4시간 보관해주세요.
 						</h6>
 					</div>
 					</div>
