--- a/flow-main.1-3-6.html
+++ b/flow-main.1-3-6.html
@@ -35,7 +35,8 @@
 				<div class="recipe">
 					<div class="text">
 						<h6>
-							3. 그릇 또는 용기에 3등분한 카스테라를 얹고, 블랙커피를 숟가락을 이용하여 적셔줍니다.
+							6. 카카오파우더를 고운 체를 이용하여 뿌려줍니다.
+						</h6>
 					</div>
 					</div>
 					<div class="flex-r">
