--- a/flow-main.templete.html
+++ b/flow-main.templete.html
@@ -29,11 +29,12 @@
 			</header>
 
 			<div class="space"></div>
-
+<!-- 메인컨텐츠 -->
 			<div class="main">
-			
 			</div>
+			<!-- 메인컨텐츠 -->
 			
+			<!-- 공백 -->
 			<div class="space"></div>
 					<footer>
 				<div class="footer-icon"></div>
@@ -42,6 +43,11 @@
 				<div class="footer-icon"></div>
 				<div class="footer-icon"></div>
 			</footer>
+			<!-- 하단메뉴 -->
+			<!-- con -->
 	</div>
+	<!-- root -->
+	</div>
+
 </body>
 </html>
