--- a/flow-main.1-1.html
+++ b/flow-main.1-1.html
@@ -59,8 +59,10 @@
 				</div>
 				</div>
 			</div>
+			<div class="nametag-full">
+				<h3>나만의 레시피 등록</h3>
 			</div>
-		
+			</div>
 			
 			<footer>
 				<div class="footer-icon"></div>
