--- a/flow-main.1-1.html
+++ b/flow-main.1-1.html
@@ -59,7 +59,7 @@
 				</div>
 				</div>
 			</div>
-			<div class="nametag-full">
+			<div class="nametag-full-2">
 				<h3>나만의 레시피 등록</h3>
 			</div>
 			</div>
