--- a/main.store.html
+++ b/main.store.html
@@ -31,6 +31,14 @@
 			<div class="space"></div>
 <!-- 메인컨텐츠 -->
 			<div class="main">
+				<div class="nametag-full-2">
+					<h3>참깨스토어</h3>
+				</div>
+				<div class="nametag-full-3 m-t">
+					<h5>검색으로 찾기</h5>
+				</div>
+
+
 			</div>
 			<!-- 메인컨텐츠 -->
 			
