--- a/flow-main.store.2.html
+++ b/flow-main.store.2.html
@@ -14,6 +14,13 @@
 			margin-top:2vh;
 			margin-bottom: 1vh;
 		}
+		.b-box{
+			height: 30vh;
+			position: fixed;
+			top: 30vh;
+			left: 42.5vw;
+			flex-direction: column;
+		}
 	</style>
 </head>
 <body>
@@ -31,14 +38,33 @@
 			<div class="space"></div>
 <!-- 메인컨텐츠 -->
 			<div class="main">
-				<div class="nametag-full-2">
-					
+					<h3>참깨스토어</h3>
+				<div class="nametag-full-3 m-t">
+					<h5>검색으로 찾기</h5>
 				</div>
-			</div>
+				<div class="space"></div>
+				<div class="b-img"></div>
+					<h4>유기농 특란 30구 - 7,900원</h4>
+				<div class="nametag-full-3">
+					<h5>바로구매</h5>
+				</div>
+				<div class="b-img m-t"></div>
+					<h5 class="m-b m-t">자신있는 3가지!</h5>
+					<h5 class="m-b">첫째, 건강합니다!</h5>
+					<h5 class="m-b">둘째, 안전합니다!</h5>
+					<h5 class="m-b">셋째, 믿을 수 있습니다!</h5>
+				<div class="b-img"></div>
+
+
+					</div>
 			<!-- 메인컨텐츠 -->
-			
+			<div class="b-box">
+				<h4 class="m-b">결제가 완료되었습니다!</h4>
+				<h5 class="m-t">다른 상품 보러가기</h5>
+			</div>
 			<!-- 공백 -->
 			<div class="space"></div>
+			<!-- 공백 -->
 					<footer>
 				<div class="footer-icon"></div>
 				<div class="footer-icon"></div>
