--- a/main.store.html
+++ b/main.store.html
@@ -37,13 +37,44 @@
 				<div class="nametag-full-3 m-t">
 					<h5>검색으로 찾기</h5>
 				</div>
-
-
-			</div>
+				<div class="space"></div>
+				<h4>오늘의 추천 상품</h4>
+				<div class="wrap m-t">
+					<div class="s-img-layout-2">
+						<div class="s-img-2"></div><h6>유기농 특란 30구</h6><h6>7,900원</h6>
+					</div>
+					<div class="s-img-layout-2">
+						<div class="s-img-2"></div><h6>클린 안심 키친타올</h6><h6>4,500원</h6>
+					</div>
+					<div class="s-img-layout-2">
+						<div class="s-img-2"></div><h6> 스테비아 토마토</h6><h6>14,500원</h6>
+					</div>
+					<div class="s-img-layout-2">
+						<div class="s-img-2"></div><h6> 그럴만두-김치</h6><h6>8,700원</h6>
+					</div>
+					<div class="s-img-layout-2">
+						<div class="s-img-2"></div><h6> 뚜기뚜밥 6EA</h6><h6>5,500원</h6>
+					</div>
+					<div class="s-img-layout-2">
+						<div class="s-img-2"></div><h6> 퓨어 오렌지1.3kg</h6><h6>8,900원</h6>
+					</div>
+					
+					<div class="s-img-layout-2">
+						<div class="s-img-2"></div><h6> 미니텀블러 472ml</h6><h6>9,600원</h6>
+					</div>
+					<div class="s-img-layout-2">
+						<div class="s-img-2"></div><h6> 우리초콜릿 쨈</h6><h6>12,600원</h6>
+					</div>
+					<div class="s-img-layout-2">
+						<div class="s-img-2"></div><h6> 저기레몬즙 500ml</h6><h6>960원</h6>
+					</div>
+					</div>
+					</div>
 			<!-- 메인컨텐츠 -->
 			
 			<!-- 공백 -->
 			<div class="space"></div>
+			<!-- 공백 -->
 					<footer>
 				<div class="footer-icon"></div>
 				<div class="footer-icon"></div>
