--- a/login.html
+++ b/login.html
@@ -20,9 +20,9 @@
 		<div class="con-c">
 			<div><h1>참깨</h1></div>
 			<div>
-				<div class="box"><p>카카오로 빠른 시작</p></div>
-				<div class="box"><p>네이버로 빠른 시작</p></div>
-				<div class="box"><p>Apple로 로그인</p></div>
+				<div class="b-box"><p>카카오로 빠른 시작</p></div>
+				<div class="b-box"><p>네이버로 빠른 시작</p></div>
+				<div class="b-box"><p>Apple로 로그인</p></div>
 			</div>
 			<div><p>다른 방법으로 로그인</p></div>
 		</div>
